--- a/apps/docs/app/ui/layout/mobileMenu/mobileMenu.css
+++ b/apps/docs/app/ui/layout/mobileMenu/mobileMenu.css
@@ -9,7 +9,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    z-index: 3;
+    z-index: var(--hd-zIndex-800);
     opacity: 0;
 }
 
@@ -92,7 +92,7 @@
     color: var(--hd-color-neutral-text-weakest);
 }
 
-.hd-mobile-menu--opening  {
+.hd-mobile-menu--opening {
     animation: fade-in .1s ease-in forwards;
 }
 
